[project]
name = "nonebot-plugin-apod"
version = "1.2.0"
description = "定时发送 NASA 每日提供的天文图片"
readme = "README.md"
authors = [{ name = "lyqgzbl", email = "admin@lyqgzbl.com" }]
license = "MIT"
keywords = ["nonebot2", "NASA"]
requires-python = ">=3.10"
dependencies = [
  "aiofiles>=24.1.0",
  "httpx >=0.28.0, <1.0.0",
  "Pillow >=10.0.0",
  "nonebot2 >=2.2.1, <3.0.0",
  "nonebot-plugin-argot >=0.2.2",
  "nonebot-plugin-localstore >=0.7.0, <1.0.0",
  "nonebot-plugin-apscheduler >=0.5.0, <1.0.0",
  "nonebot-plugin-alconna >=0.57.1, <1.0.0",
]

[project.urls]
Homepage = "https://github.com/lyqgzbl/nonebot-plugin-apod"
Repository = "https://github.com/lyqgzbl/nonebot-plugin-apod"
Documentation = "https://github.com/lyqgzbl/nonebot-plugin-apod#readme"

[build-system]
requires = ["uv_build >=0.8.3, <0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "nonebot_plugin_apod"
module-root = "src"

[dependency-groups]
dev = [
    "nonebug>=0.4.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "I",
    "E", "W", "F",
    "UP",
    "B",
    "C4", "C90",
    "SIM",
    "PERF",
    "RUF", "RUF100",
    "PT",
    "Q",
]

ignore = ["I001","E402", "B008", "RUF001"]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.pyright]
pythonPlatform = "All"
extraPaths = ["src"]
